# bridge-patterns-2

./: CMakeLists.txt  README.md  comp.h  comp_impl.h  comp_minimal.h  main.cpp
